# PAIN

./: .gitignore  .gitmodules  CMakeLists - Copy.txt  CMakeLists.txt  PAINEngine.sln  README.md  build.bat  build_and_log.bat  build_log.txt  script_build_and_run.bat  script_build_and_run.sh  script_clean.bat  script_clean.sh  script_run.bat  script_run.sh  script_vcpkg_setup.bat  vcpkg.json  vcpkg_setup.md
Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  imgui.ini
Game/src/: Game.cpp  stdafx.h
PAINEngine/: AndroidImGuiHelper.cpp  AndroidImGuiHelper.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Core.h  GLRenderer.cpp  GLRenderer.h  PAINEngine.h  PAINEngine.sln  PAINEngine.vcxproj  PAINEngine.vcxproj.filters  Platform.h  ShaderManager.cpp  ShaderManager.h  main.cpp  pch.h  sSerialization.cpp  sSerialization.h
PAINEngine/Applications/: AppSystem.cpp  AppSystem.h  Application.cpp  Application.h
PAINEngine/Audio/: AudioManager.cpp  AudioManager.h
PAINEngine/CoreSystems/Collision/: sCollision.cpp  sCollision.h  sLayer.cpp  sLayer.h
PAINEngine/CoreSystems/Events/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
PAINEngine/CoreSystems/Renderer/: Shader.cpp  Shader.h  TestTriangleLayer.cpp  TestTriangleLayer.h
PAINEngine/CoreSystems/Windows/: Window.h
PAINEngine/CoreSystems/Windows/GLFW/: GLFWWindow.cpp  GLFWWindow.h
PAINEngine/CoreSystems/Windows/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLContext.cpp
PAINEngine/ECS/: Controller.cpp  Controller.h
PAINEngine/ECS/Components/: cPhysics.h  cTransform.h
PAINEngine/ECS/System/: System.cpp
PAINEngine/Game/: Game.cpp  Game.vcxproj
PAINEngine/LayeredSystems/LevelEditor/: Command.cpp  Editor.cpp  Editor.h
PAINEngine/LayeredSystems/LevelEditor/Panels/: Panels.cpp  Panels.h  ToolsPanel.cpp  ToolsPanel.h
PAINEngine/Logging/: Log.cpp  Log.h
PAINEngine/PAINEngine/: PAINEngine.vcxproj  PAINEngine.vcxproj.filters
PAINEngine/PAINEngine/dependencies/lib/: Jolt_Release.lib
PAINEngine/PAINEngine/src/: Engine.cpp  Engine.h  PAINEngine.h
PAINEngine/PAINEngine/src/PAINEngine/: Application.cpp  EntryPoint.h  Log.h  pch.h
PAINEngine/Systems/Physics/: sysPhysics.cpp  sysPhysics.h
PAINEngine/dependencies/lib/: Jolt_Debug.lib  glew32s.lib
PAINEngine/shaders/: basic_fragment_es2.glsl - Shortcut.lnk
PAINEngine/src/: PAINEngine.h
PAINEngine/src/PAINEngine/: AppLayer.h  Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Platform.h  pch.h
PAINEngine/src/PAINEngine/Application/: Application.cpp  Application.h
PAINEngine/src/PAINEngine/Applications/: AppLayer.cpp  AppLayer.h  AppSystem.cpp  AppSystem.h  Application.cpp  Application.h  EntryPoint.h
PAINEngine/src/PAINEngine/Audio/: AudioManager.cpp  AudioManager.h
PAINEngine/src/PAINEngine/Components/: cPhysics.h  cTransform.h  components.h
PAINEngine/src/PAINEngine/Core/: EntryPoint.h  pch.cpp  pch.h
PAINEngine/src/PAINEngine/CoreSystems/Audio/: Audio.cpp  Audio.h
PAINEngine/src/PAINEngine/CoreSystems/Audio/FMOD/: FMODAudio.cpp  FMODAudio.h
PAINEngine/src/PAINEngine/CoreSystems/Collision/: sLayer.cpp
PAINEngine/src/PAINEngine/CoreSystems/Events/: Event.h  WindowEvents.h
PAINEngine/src/PAINEngine/CoreSystems/Renderer/: Shader.cpp  TestTriangleLayer.cpp  TestTriangleLayer.h
PAINEngine/src/PAINEngine/CoreSystems/Serialization/: sSerialization.cpp  sSerialization.h
PAINEngine/src/PAINEngine/CoreSystems/Windows/: Window.h
PAINEngine/src/PAINEngine/CoreSystems/Windows/GLFW/: GLFWWindow.cpp  GLFWWindow.h
PAINEngine/src/PAINEngine/CoreSystems/Windows/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLContext.cpp  OpenGLContext.h
PAINEngine/src/PAINEngine/ECS/: Controller.cpp  Controller.h
PAINEngine/src/PAINEngine/ECS/Components/: cPhysics.h  cTransform.h
PAINEngine/src/PAINEngine/ECS/System/: System.cpp  System.h  SystemManager.h
PAINEngine/src/PAINEngine/Events/: AssetEvents.h  Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
PAINEngine/src/PAINEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
PAINEngine/src/PAINEngine/LayeredSystems/LevelEditor/: Actions.cpp  Actions.h  Command.cpp  Editor.cpp  Editor.h
PAINEngine/src/PAINEngine/LayeredSystems/LevelEditor/Panels/: Panels.cpp  Panels.h  ToolsPanel.cpp  ToolsPanel.h
PAINEngine/src/PAINEngine/LevelEditor/: Editor.cpp  Editor.h
PAINEngine/src/PAINEngine/Log/: Log.cpp  Log.h
PAINEngine/src/PAINEngine/Logging/: Log.h
PAINEngine/src/PAINEngine/Managers/Collision & Layer/: sCollision.cpp  sCollision.h  sLayer.h
PAINEngine/src/PAINEngine/Managers/Events/: Event.h
PAINEngine/src/PAINEngine/Managers/Windows/: Window.h
PAINEngine/src/PAINEngine/Managers/Windows/GLFW/: GLFWWindow.cpp  GLFWWindow.h
PAINEngine/src/PAINEngine/Renderer/: GraphicsContext.h  TestTriangleLayer.h
PAINEngine/src/PAINEngine/Renderer/OpenGL/: ImGuiOpenGLRenderer.h  OpenGLContext.cpp  OpenGLContext.h
PAINEngine/src/PAINEngine/Systems/: sysPhysics.cpp  sysPhysics.h
PAINEngine/src/PAINEngine/Systems/Physics/: sysPhysics.cpp  sysPhysics.h
PAINEngine/src/PAINEngine/Systems/Physics & Collision/: mCollision.cpp  mCollision.h  sCollision.cpp  sCollision.h  sysPhysics.cpp  sysPhysics.h
PAINEngine/src/PAINEngine/Windows/: Window.h
PAINEngine/src/PAINEngine/Windows/GLFW/: GLFWWindow.cpp  GLFWWindow.h
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  JNIBridge.cpp  NativeTemplate.cpp
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: ImportDependencies.cmake  VendorTargets.cmake  compiler_settings.cmake  vcpkg_android.cmake  vcpkg_windows.cmake
source/Game/: Game.cpp
source/PAINEngine/PAINEngine/: pch.h
source/PAINEngine/PAINEngine/Applications/: EntryPoint.h
source/PAINEngine/PAINEngine/Audio/: AudioManager.h
source/PAINEngine/PAINEngine/CoreSystems/Events/: MouseEvents.h
source/PAINEngine/PAINEngine/CoreSystems/Renderer/: Shader.cpp  Shader.h
(+14 files in other folders)
